--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,7 +8,6 @@ h1{
     font-size:85px;
     display: flex;
     justify-content: center;
-background-color: @navbgcolor;
 }
 
 header{
@@ -17,22 +16,24 @@ display:flex;
 flex-direction: column;
 justify-content:center;
 width:100%;
-
+background-color: @navbgcolor;
 
 }
 
 .navigation{
-    background-color: @navbgcolor;
  display: flex;
 justify-content: center;
 width: 800px;
 
 .links{
+  
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    font-size: 2rem;
-    width: 100%;
+    justify-content: space-around;
+    font-size: 33px;
+    width: 77%;
+    margin-left: 12%;
+    text-decoration: none;
 }
 
 }
