--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,6 @@
 // Variables
 
 @btncolor: lightblue;
-@navbgcolor : #827b7b;
+@navbgcolor :gainsboro;
 @fontcolor : #000000;
 @hovercolor : #ffffff;
